Alteração do MedicoController to.list para .collect(Collectors.toList()) em alguns casos estava dando erro para retornar o médico após a escolha da especialidade, criação de mais entidades no data loader para povoar o banco de dados de teste.